tests/reference/asr-test_dict2-4587f02.stderr
semantic error: Key type should be 'str' instead of 'i32'
 --> tests/errors/test_dict2.py:4:7
  |
4 |     y[1] = -3
  |       ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
